rework to LinkedList(optimization)